log
Thu Mar 25 01:54:46 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:6: error: unknown type name ‘list’; did you mean ‘List’?
      list* ll = (list*)malloc(sizeof(list));
      ^~~~
      List
list.c:32:18: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
      list* ll = (list*)malloc(sizeof(list));
                  ^~~~
                  List
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
      list* ll = (list*)malloc(sizeof(list));
                       ^
list.c:33:8: error: request for member ‘tamano’ in something not a structure or union
      ll->tamano=0;
        ^~
list.c:34:8: error: request for member ‘primerItem’ in something not a structure or union
      ll->primerItem = NULL;
        ^~
list.c:35:8: error: request for member ‘ultimoItem’ in something not a structure or union
      ll->ultimoItem = NULL;
        ^~
list.c:36:13: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
      return ll;
             ^~
cc1: all warnings being treated as errors
Compilation failed
Thu Mar 25 01:55:04 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:8: error: ‘List {aka struct List}’ has no member named ‘tamano’
      ll->tamano=0;
        ^~
list.c:34:8: error: ‘List {aka struct List}’ has no member named ‘primerItem’
      ll->primerItem = NULL;
        ^~
list.c:35:8: error: ‘List {aka struct List}’ has no member named ‘ultimoItem’
      ll->ultimoItem = NULL;
        ^~
Compilation failed
Thu Mar 25 01:57:10 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ee558f8
Thu Mar 25 01:57:42 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a5d1dbe
Thu Mar 25 02:17:51 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2ca5fb8
Thu Mar 25 02:24:32 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
914a706
Thu Mar 25 02:26:11 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
f901745
Thu Mar 25 02:26:38 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f2e4272
Thu Mar 25 02:32:20 UTC 2021: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
946cb7d
Thu Mar 25 02:55:13 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8e7c975
Thu Mar 25 02:56:05 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1c896f2
Thu Mar 25 02:58:49 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
8bb596b
Thu Mar 25 03:02:59 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8197f29
Thu Mar 25 03:05:09 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
754ab42
Thu Mar 25 03:06:45 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dd22716
Thu Mar 25 03:07:10 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
3b6a39f
Thu Mar 25 03:07:28 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7295544
Thu Mar 25 03:10:07 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
56ed923
Thu Mar 25 03:14:58 UTC 2021: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
df6cbb5
Thu Mar 25 03:19:23 UTC 2021: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
7ee3314
Thu Mar 25 03:24:38 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e7ea482
Thu Mar 25 03:25:43 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
ccf36c6
Thu Mar 25 03:26:06 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
50547ba
Thu Mar 25 03:27:48 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
66ee624
Thu Mar 25 03:28:06 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7ebc928
Thu Mar 25 03:28:44 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b1160cd
Thu Mar 25 03:29:45 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
b1aba91
